TLCPM-285-3 - reconnect directive, remove from sserve/app.js

--- a/public/batch.html
+++ b/public/batch.html
@@ -321,6 +321,7 @@
 	<script src="js/bulk/app.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/bulk/controllers.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/bulk/factories.js" type="text/javascript" charset="utf-8"></script>
+  <script src="js/directives.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/filters.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/utils.js" type="text/javascript" charset="utf-8"></script>
 </body>
