--- a/public/batch.html
+++ b/public/batch.html
@@ -176,6 +176,7 @@
 											<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
 												<a ng-hide="concludedBatch.list" href="" class="btn btn-default btn-xs" ng-click="getBatchReport(concludedBatch[1], $index)">See
 													report</a>
+                        <div class="spinner" ng-show="concludedBatch.batchReportLoading"></div>
 											</div>
 										</div>
                     <div class="row" ng-show="concludedBatch.list">
@@ -234,7 +235,7 @@
           <div class="modal-body" style="">
             <div class="container">
               <p>
-                {{siteReport.tool_name}}.
+                {{siteReport.tool_name}}. <div class="spinner" ng-show="siteReportLoading"></div>
                 Destination: {{siteReport.destination_type | uppercase}}.
 
                 <a href="siteReport.destination_url" target="_top">{{siteReport.destination_url | destinationLinkName}}</a>
