--- a/public/batch.html
+++ b/public/batch.html
@@ -60,7 +60,7 @@
 								<div class="well form-group">
                   <div id="bulkUploadFileContainer">
                     <div class="form-group">
-                      <label for="bulkUploadName">Batch name (required)</label>
+                      <label for="bulkUploadName">Batch name (required)</label> <span class="pull-right"> Migrate: <input id="resourcesChoice" ng-model="uploadSource" type="radio" name="uploadType" value="resources"> <label for="resourcesChoice">Resources</label>  <input id="emailChoice" ng-model="uploadSource" type="radio" name="uploadType" value="email"> <label for="emailChoice">Email</label> </span>
                       <input type="text" id="bulkUploadName" class="form-control" name="name" ng-model="upload.name" value="">
                     </div>
                     <div class="form-group">
