--- a/public/index.html
+++ b/public/index.html
@@ -105,6 +105,68 @@
   		</div>
   </div>
 
+  <div class="modal fade" id="membershipModal" tabindex="-1" role="dialog"
+    aria-labelledby="membershipModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal"
+            aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <h4 class="modal-title" id="membershipModalLabel">Site membership for {{membership.metadata.site_name}}</h4>
+        </div>
+        <div class="modal-body">
+          <h4>Google Groups format</h4>
+          <div class="well">
+            <span ng-repeat="member in membership.data.gg_format">{{member}}<span ng-show="!$last">, </span></span>
+          </div>
+          <h4>MCommunity format</h4>
+          <div class="well">
+            <div class="" ng-show="membership.data.mc_format.owners.length">
+              <h5>
+                Owners
+              </h5>
+              <span ng-repeat="owner in membership.data.mc_format.owners">{{owner}}<span ng-show="!$last">, </span></span>
+            </div>
+            <div class="" ng-show="membership.data.mc_format.members.length">
+              <h5>
+                Members
+              </h5>
+              <span ng-repeat="member in membership.data.mc_format.members">{{member}}<span ng-show="!$last">, </span></span>
+            </div>
+          </div>
+          <h4>Readable format</h4>
+          <div class="well">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">Name</th>
+                  <th scope="col">Role</th>
+                  <th scope="col">Id</th>
+                  <th scope="col">Last visit</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr ng-repeat="member in membership.data.readable_format">
+                  <td scope="row">{{member.userSortName}}</td>
+                  <td>{{member.memberRole}}</td>
+                  <td>{{member.userId}}</td>
+                  <td>{{member.lastLoginTime  | date:'MM/dd/yy hh:mm a'}}</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+
+
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="modal fade" id="reportModal" tabindex="-1" role="dialog"
     aria-labelledby="reportModalLabel">
     <div class="modal-dialog" role="document">
