--- a/public/index.html
+++ b/public/index.html
@@ -127,14 +127,21 @@
               <a href="#" class="btn btn-sm btn-link pull-right"
                  tabindex="0"
                 data-trigger="focus"
-                data-placement="left" data-toggle="popover" title="Info on roles"
-                data-content="This would show role mapping information.<br> Can <strong>contain</strong> markup.">Info
+                data-placement="left" data-toggle="popover" title="CTools > MComm roles"
+                data-content="Owner > Owner<br>Organizer > Moderator<br>Member or Observer > Member">Info
               </a>
               <h5>
                 Owners
               </h5>
               <span ng-repeat="owner in membership.data.mc_format.owners">{{owner}}<span ng-show="!$last">, </span></span>
             </div>
+            <div class="" ng-show="membership.data.mc_format.moderators.length">
+              <h5>
+                Moderators
+              </h5>
+              <span ng-repeat="moderator in membership.data.mc_format.moderators">{{moderator}}<span ng-show="!$last">, </span></span>
+            </div>
+
             <div class="" ng-show="membership.data.mc_format.members.length">
               <h5>
                 Members
