TLCPM-592 - better formatting for CT to MC role mapping information

--- a/public/index.html
+++ b/public/index.html
@@ -128,7 +128,7 @@
                  tabindex="0"
                 data-trigger="focus"
                 data-placement="left" data-toggle="popover" title="CTools to MComm roles"
-                data-content="CTools Owner > MComm Owner<hr>All others are MComm group members">Info
+                data-content="CTools Owners <span style='font-size:16px'>➙</span> MComm Owners<br>CTools other <span style='font-size:16px'>➙</span> MComm Members ">Information
               </a>
               <h5>
                 Owners
