--- a/public/batch.html
+++ b/public/batch.html
@@ -49,12 +49,6 @@
 	<div class="container-fluid" ng-controller="projectMigrationBatchController" ng-show="isAdminUser">
     <div class="row">
       <div class="col-md-6 col-lg-6 col-sm-6 col-xs-12">
-        <div class="no-items alert alert-danger" ng-show="ctoolsDown" style="display:inline-block">
-          ⚠️ CTools is not available at the moment.
-        </div>
-        <div class="no-items alert alert-danger" ng-show="boxDown"  style="display:inline-block">
-          ⚠️ Box is not available at the moment.
-        </div>
       </div>
       <div class="col-md-6 col-lg-6 col-sm-6 col-xs-12 topMenu">
         <a ng-show="!boxAuthorized" class="btn btn-primary" href=""
@@ -76,7 +70,13 @@
             <div class="alert alert-warning" ng-show="!boxAuthorized">
               Authorize to Box first to start a batch migration.
             </div>
-						<form role="tabpanel" class="tab-pane active" id="upload" ng-show="boxAuthorized">
+            <div class="no-items alert alert-danger" ng-show="ctoolsDown" style="display:inline-block">
+              ⚠️ CTools is not available at the moment.
+            </div>
+            <div class="no-items alert alert-danger" ng-show="boxDown"  style="display:inline-block">
+              ⚠️ Box is not available at the moment.
+            </div>
+						<form role="tabpanel" class="tab-pane active" id="upload" ng-show="boxAuthorized && (!ctoolsDown && !boxDown)">
 								<h3 class="panel-title panel-title-batch">Upload</h3>
 								<div class="well form-group">
                   <div id="bulkUploadFileContainer">
